deploy/k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: linximanager
  labels:
    app: admin
spec:
  selector:
    app: admin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
